# GNTest

./: .clang-format  .gitattributes  .gitignore  .gn  .ycm_extra_conf.py  BUILD.gn  LICENSE  Makefile  README.md  TODOs.md  build.bat
assets/shaders/vulkan/: BUILD.gn  common.frag  common.vert  compile_shader.py  demo.frag  demo.vert
experiments/: BUILD.gn  graphics_api.cc  memory_blocks.cc  osx_main.cc  voxel_renderer.cc  vulkan_test.cc  work_queue.cc
experiments/new_api/: BUILD.gn  drawer.cc  drawer.h  game.h  graphics_api.cc  imgui_ui.h  tetris.cc  tetris.h  tetris_main.cc
experiments/tetris/: BUILD.gn  drawer.cc  drawer.h  game.cc  game.h  imgui.cc  imgui.h  main.cc  shape.cc  shape.h  tetris.cc  tetris.h  tetris_renderer.cc  tetris_renderer.h
experiments/voxel/: BUILD.gn  voxel_chunk.cc  voxel_chunk.h  voxel_terrain.cc  voxel_terrain.h  voxel_utils.cc  voxel_utils.h
licenses/: README.md  glm.license
old/: backup.cc  camera.cc  camera.h  mesh.cc  mesh.h  shader.h  texture.cc  texture_array.h  texture_atlas.h
src/: BUILD.gn  assets.cc  assets.h  atlas_data.h  camera.cc  camera.h  client_main.cc  err.cc  err.h  hello_world.cc  log.cc  log.h  macros.h  main.cc  mesh.cc  mesh.h  opengl_example.cc  sdl2_main.cc  sdl_context.cc  sdl_context.h  server_main.cc  shader.cc  shader.h  socket.cc  socket.h  socket_main.cc  status.cc  status.h  string.cc  test_main.cc  texture.cc  texture.h  texture_array.cc  texture_array.h  texture_atlas.cc  texture_atlas.h  voxel.backup.cc  voxel_chunk.cc  voxel_chunk.h  voxel_terrain.cc  (+10 more)
src/arch/: BUILD.gn  arch_provider.h  linux_arch_provider.cc  osx_arch_provider.cc  windows_arch_provider.cc
src/debug/: BUILD.gn  time_logger.cc  time_logger.h  timed_block.cc  timed_block.h  timer.cc  timer.h  volumes.cc  volumes.h
src/graphics/GL/: BUILD.gn  debug.cc  debug.h  def.cc  def.h  utils.cc  utils.h
src/graphics/vulkan/: vulkan_test.cc
src/imgui/: BUILD.gn  imgui_context.cc  imgui_context.h  imgui_renderer.cc  imgui_renderer.h
src/input/: BUILD.gn  input.cc  input.h
src/math/: BUILD.gn  angles.h  math.cc  math.h  vec.cc  vec.h
src/model/: BUILD.gn  cube.cc  cube.h  minecraft_cube.cc  minecraft_cube.h  plane.cc  plane.h
src/multithreading/: semaphore.cc  semaphore.h  work_queue.cc  work_queue.h
src/old/: client_main.cc  server_main.cc  socket.h  vulkan_context.cc  vulkan_context.h
src/platform/: BUILD.gn  linux_platform.cc  osx_platform.cc  platform.cc  platform.h  windows_platform.cc
src/sdl2/: BUILD.gn  input.cc  input.h  sdl2_test.cc  sdl_context.cc  sdl_context.h
src/utils/: BUILD.gn  clear_on_move.h  coords.h  debug.cc  debug.h  file.cc  file.h  gl.cc  gl.h  glm.h  glm_impl.h  location.cc  location.h  log.cc  log.h  macros.h  path.cc  status.cc  status.h  string.cc  string.h  unique_handle.h
tests/: BUILD.gn  euler_angles.cc  linked_list.cc  math.cc  memory_blocks.cc  memory_pool.cc  optional.cc  render_command.cc  strings.cc  test_main.cc  uniforms.cc
warhol/: BUILD.gn  assets.cc  shader.cc  texture.h  texture_array.cc  texture_atlas.cc
warhol/assets/: BUILD.gn  asset_paths.cc  asset_paths.h  assets.cc  assets.h
warhol/containers/: BUILD.gn  linked_list.h  list.h  sort.h
warhol/debug/: BUILD.gn  time_logger.cc  time_logger.h  timed_block.cc  timed_block.h  timer.cc  timer.h  volumes.cc  volumes.h
warhol/graphics/: BUILD.gn  graphics.h  renderer.cc  renderer.h  renderer_backend.cc  renderer_backend.h  renderer_backend_vulkan.cc  renderer_backend_vulkan.h
warhol/graphics/GL/: debug.cc  def.cc  def.h  utils.cc
warhol/graphics/common/: BUILD.gn  defs.h  image.cc  image.h  mesh.cc  mesh.h  render_command.cc  render_command.h  renderer.cc  renderer.h  renderer_backend.cc  renderer_backend.h  shader.cc  shader.h  shader_manager.cc  shader_manager.h  texture.cc  texture.h  unstructured_buffer.cc  unstructured_buffer.h
warhol/graphics/opengl/: BUILD.gn  mesh.cc  mesh.h  renderer_backend.cc  renderer_backend.h  shader.cc  shader.h  texture.cc  texture.h  utils.cc  utils.h
warhol/graphics/vulkan/: BUILD.gn  allocator.cc  allocator.h  commands.cc  commands.h  context.cc  context.h  def.h  handle.cc  handle.h  image_utils.cc  image_utils.h  memory.cc  memory.h  memory_utils.cc  memory_utils.h  renderer_backend.cc  renderer_backend.h  renderer_backend_impl.cc  renderer_backend_impl.h  shader_manager.cc  shader_manager.h  staging_manager.cc  staging_manager.h  utils.cc  utils.h  vulkan_test.cc  vulkan_utils.h
warhol/imgui/: BUILD.gn  imgui_context.cc  imgui_context.h  imgui_renderer.cc  imgui_renderer.h
warhol/input/: input.cc  input.h
warhol/math/: math.cc  math.h  vec.cc  vec.h
warhol/memory/: BUILD.gn  array_heap.h  memory_pool.cc  memory_pool.h  memory_tracker.cc  memory_tracker.h  types.h
warhol/model/: BUILD.gn  cube.cc  plane.cc
warhol/multithreading/: BUILD.gn  semaphore.cc  semaphore.h  work_queue.cc  work_queue.h
warhol/platform/: BUILD.gn  linux_platform.cc  osx_platform.cc  path.cc  platform.cc  platform.h  timing.cc  timing.h  windows_platform.cc
warhol/scene/: BUILD.gn  camera.h
warhol/sdl2/: BUILD.gn  input.cc  sdl_context.cc  sdl_context.h
warhol/ui/: BUILD.gn  imgui.h
warhol/ui/imgui/: BUILD.gn  helpers.cc  helpers.h  imgui.cc  imgui.h  imgui_renderer.cc  imgui_renderer.h  imgui_shaders.cc  imgui_shaders.h  warhol_imgui_config.h
warhol/utils/: BUILD.gn  align.h  assert.cc  assert.h  clear_on_move.h  coords.h  debug.cc  debug.h  file.cc  file.h  glm.h  glm_impl.h  location.cc  location.h  log.cc  log.h  macros.h  optional.h  path.cc  path.h  scope_trigger.h  status.cc  status.h  string.cc  string.h  track_guard.h  types.cc  types.h
warhol/window/: BUILD.gn  window.h  window_manager.cc  window_manager.h
warhol/window/common/: BUILD.gn  window.cc  window.h  window_backend.cc  window_backend.h  window_manager_backend.cc  window_manager_backend.h
warhol/window/sdl/: BUILD.gn  def.h  sdl_input.cc  sdl_input.h  sdl_opengl.cc  sdl_opengl.h  sdl_vulkan.cc  sdl_vulkan.h  sdl_vulkan_window_manager.cc  sdl_vulkan_window_manager.h  window_manager.cc  window_manager.h
(+46 files in other folders)
