declare_args() {
  extra_includes = ""
}

config("default_include_dirs") {
  include_dirs = [
    "${root_build_dir}",
    "//",
    root_gen_dir,
  ]

  if (target_os == "linux") {
    include_dirs += [
      "/usr/include",
    ]
  }

  if (extra_includes != "") {
    include_dirs += [
      "${extra_includes}",
    ]
  }

}

group("default") {
  deps = [
    "//experiments:voxel_renderer",
    "//experiments:work_queue",
    "//experiments:osx",
    "//assets/shaders/vulkan:shaders",
  ]
}

group("imgui_example") {
  deps = [
    "//third_party/imgui/examples:imgui_example",
  ]
}

group("tests") {
  testonly = true
  deps = [
    "//tests",
  ]
}


