declare_args() {
  extra_includes = []
  extra_libs = []
}

config("default_include_dirs") {
  include_dirs = extra_includes
  include_dirs += [
    "${root_build_dir}",
    "//",
    "//third_party/include",
    root_gen_dir,
  ]
  libs = extra_libs

  if (target_os == "linux") {
    include_dirs += [
      "/usr/include",
    ]
  }
}

group("default") {
  deps = [
    ":tetris",
    #"//experiments:examples",
    #"//experiments:vulkan_test",
    #"//experiments:voxel_renderer",
    #"//experiments:work_queue",
    #"//experiments:osx",
    #"//assets/shaders/vulkan:shaders",
  ]
}

group("tetris") {
  deps = [
    "//experiments/tetris",
  ]
}

#group("imgui_example") {
#  deps = [
#    "//third_party/imgui/examples:imgui_example",
#  ]
#}

group("tests") {
  testonly = true
  deps = [
    "//tests",
  ]
}


