# Copyright 2018, Cristián Donoso.
# This code has a BSD license. See LICENSE.

executable("voxel_renderer") {
  sources = [
    "voxel_renderer.cc",
  ]

  deps = [
    "voxel:lib",
    "//warhol",
  ]

}

executable("work_queue") {
  sources = [
    "work_queue.cc",
  ]

  deps = [
    "voxel:lib",
    "//warhol",
    "//warhol/multithreading",
  ]
}

executable("osx") {
  sources = [
    "osx_main.cc",
  ]

  deps = [
    "//warhol",
  ]
}
