# Copyright 2018, Cristián Donoso.
# This code has a BSD license. See LICENSE.

#executable("voxel_renderer") {
#  sources = [
#    "voxel_renderer.cc",
#  ]
#
#  deps = [
#    "voxel:lib",
#    "//warhol",
#  ]
#}
#
#executable("work_queue") {
#  sources = [
#    "work_queue.cc",
#  ]
#
#  deps = [
#    "voxel:lib",
#    "//warhol",
#    "//warhol/multithreading",
#  ]
#}
#
#executable("osx") {
#  sources = [
#    "osx_main.cc",
#  ]
#
#  deps = [
#    "//warhol",
#  ]
#}
#
#executable("memory_blocks") {
#  sources = [
#    "memory_blocks.cc",
#  ]
#
#  deps = [
#    "//warhol/memory"
#  ]
#}

# Vulkan Test ------------------------------------------------------------------

#executable("vulkan_test") {
#  sources = [
#    "vulkan_test.cc",
#  ]
#
#  deps = [
#    "//warhol/debug:timing",
#    "//warhol/graphics:vulkan_renderer",
#    "//warhol/math",
#    "//warhol/window:sdl_vulkan",
#  ]
#
#  data_deps = [
#    "//assets/shaders/vulkan:shaders",
#  ]
#
#  if (target_os == "linux") {
#    libs = [ "-lpthread" ]
#  }
#}

executable("graphics_api") {
  sources = [
    "graphics_api.cc",
  ]

  deps = [
    "//warhol/assets",
    "//warhol/graphics:opengl_renderer",
    "//warhol/math",
    "//warhol/memory",
    "//warhol/ui:imgui",
    "//warhol/utils",
    "//warhol/window:sdl_opengl",
  ]
}
