# Copyright 2018, Cristián Donoso.
# This code has a BSD license. See LICENSE.

source_set("warhol_lib") {
  sources = [
    "assets.cc",
    "assets.h",
    "camera.cc",
    "camera.h",
    "shader.cc",
    "shader.h",
    "texture.cc",
    "texture.h",
    "texture_atlas.cc",
    "texture_atlas.h",
  ]
  deps = [
    "//src/input",
    "//src/math",
    "//src/model",
    "//src/utils",
  ]
  public_deps = [
    "//src/graphics/GL",
    "//src/sdl2",
  ]
}

# Executables -------------------------------------------------------------------

executable("opengl_example") {
  sources = [
    "opengl_example.cc",
  ]
  deps = [
    ":warhol_lib",
    "//src/arch:arch_provider",
    "//src/utils",
  ]
}
