# Copyright 2018, Cristián Donoso.
# This code has a BSD license. See LICENSE.

source_set("warhol_lib") {
  sources = [
    "assets.cc",
    "assets.h",
    "camera.cc",
    "camera.h",
    "mesh.cc",
    "mesh.h",
    "shader.cc",
    "shader.h",
    "texture.cc",
    "texture.h",
    "texture_atlas.cc",
    "texture_atlas.h",
    "texture_array.cc",
    "texture_array.h",
    "voxel_chunk.cc",
    "voxel_chunk.h",
    "voxel_terrain.cc",
    "voxel_terrain.h",
    "voxel_utils.cc",
    "voxel_utils.h",
  ]
  deps = [
    "//src/input",
    "//src/math",
    "//src/model",
    "//src/utils",
  ]
  public_deps = [
    "//src/debug",
    "//src/graphics/GL",
    "//src/imgui",
    "//src/sdl2",
  ]
}

# Executables -------------------------------------------------------------------

executable("opengl_example") {
  sources = [
    "opengl_example.cc",
  ]
  deps = [
    ":warhol_lib",
    "//src/platform",
    "//src/utils",
  ]
}
