# Copyright 2018, Cristián Donoso.
# This code has a BSD license. See LICENSE.

# Put all the tests to be run here.
source_set("tests_lib") {
  testonly = true
  sources = [
    "euler_angles.cc",
    "linked_list.cc",
    "memory_pool.cc",
    "optional.cc",
  ]

  public_deps = [
    "//third_party/catch2",
  ]

  deps = [
    "//warhol/math",
    "//warhol/memory",
  ]
}

executable("tests") {
  testonly = true
  sources = [
    "test_main.cc",
  ]
  deps = [
    ":tests_lib",
    "//warhol/utils",
  ]


}
