# Copyright 2019, Cristián Donoso.
# This code has a BSD license. See LICENSE.

executable("new_api") {
  sources = [
    "drawer.cc",
    "game.cc",
    "graphics_api.cc",
  ]

  deps = [
    "//warhol/assets",
    "//warhol/graphics:opengl_renderer",
    "//warhol/math",
    "//warhol/memory",
    "//warhol/ui:imgui",
    "//warhol/utils",
    "//warhol/window:sdl_opengl",
  ]
}
