# Copyright 2019, Cristián Donoso.
# This code has a BSD license. See LICENSE.

source_set("base") {
  sources = [
    "drawer.cc",
    "game.cc",
  ]

  public_deps = [
    "//warhol/assets",
    "//warhol/graphics:opengl_renderer",
    "//warhol/math",
    "//warhol/memory",
    "//warhol/ui:imgui",
    "//warhol/utils",
    "//warhol/window:sdl_opengl",
  ]
}

executable("new_api") {
  sources = [
    "graphics_api.cc",
  ]

  deps = [
    ":base",
  ]
}

executable("tetris") {
  sources = [
    "tetris.cc",
    "tetris_main.cc",
  ]

  deps = [
    ":base",
  ]
}


