# Copyright 2019, Cristián Donoso.
# This code has a BSD license. See LICENSE.

source_set("base") {
  sources = [
    "drawer.h",
    "drawer.cc",
    "game.h",
    "game.cc",
    "shape.h",
    "shape.cc",
    "tetris.h",
    "tetris.cc",
    "tetris_renderer.h",
    "tetris_renderer.cc",
  ]

  public_deps = [
    "//warhol/assets",
    "//warhol/graphics:opengl_renderer",
    "//warhol/math",
    "//warhol/memory",
    "//warhol/ui:imgui",
    "//warhol/utils",
    "//warhol/window:sdl_opengl",
  ]
}

executable("tetris") {
  sources = [
    "main.cc",
  ]

  deps = [
    ":base",
  ]
}
