# Copyright 2018, Cristián Donoso.
# This code has a BSD license. See LICENSE.

source_set("lib") {
  sources = [
    "voxel_chunk.cc",
    "voxel_chunk.h",
    "voxel_terrain.cc",
    "voxel_terrain.h",
    "voxel_utils.cc",
    "voxel_utils.h",
  ]

  deps = [
    # TODO(Cristian): This dependency should not be here.
    "//warhol/graphics/GL",
  ]
}


