# Copyright 2018, Cristián Donoso.
# This code has a BSD license. See LICENSE.

source_set("arch_provider") {
  public = [
    "arch_provider.h",
  ]
  if (is_windows) {
    sources = [ "windows_arch_provider.cc" ]
  } else if (is_linux) {
    sources = [ "linux_arch_provider.cc" ]
  } else {
    assert(false, "Unhandled arch: $target_os")
  }
}
