# Copyright 2018, Cristián Donoso.
# This code has a BSD license. See LICENSE.

source_set("debug") {
  sources = [
    "timer.cc",
    "timer.h",
    "time_logger.cc",
    "time_logger,h",
    "volumes.cc",
    "volumes.h",
  ]

  deps = [
    "//src/graphics/GL",
    "//src/sdl2",
    "//src/utils",
  ]
}
