# Copyright 2018, Cristián Donoso.
# This code has a BSD license. See LICENSE.

source_set("model") {
  sources = [
    "cube.cc",
    "cube.h",
    "minecraft_cube.cc",
    "minecraft_cube.h",
    "plane.cc",
    "plane.h",
  ]
  configs += [
    "//third_party/gl3w:gl3w_config",
  ]
  deps = [
    "//third_party/gl3w",
  ]
}
