# Copyright 2018, Cristián Donoso.
# This code has a BSD license. See LICENSE.

source_set("platform") {
  public = [
    "platform.cc",
    "platform.h",
  ]
  if (is_windows) {
    sources = [ "windows_platform.cc" ]
  } else if (is_linux) {
    sources = [ "linux_platform.cc" ]
  } else if (is_osx) {
    sources = [ "osx_platform.cc" ]
  } else {
    assert(false, "Unhandled arch: $target_os")
  }
}
