# Copyright 2018, Cristián Donoso.
# This code has a BSD license. See LICENSE.

declare_args() {
  sdl2_include_path = getenv("SDL2_SDK") + "/include"
  sdl2_lib_path = getenv("SDL2_SDK") + "/lib"
}

config("sdl2_config") {
  handled = false
  include_dirs = [ "$sdl2_include_path" ]
  if (target_os == "win" && compiler == "msvc") {
    libs = [ "${sdl2_lib_path}/SDL2/SDL2.lib" ]
    handled = true
  } else if (target_os == "mac" && compiler == "clang") {
    # NOTE: SDL2 should be installed as a framework in /Library/Frameworks
    ldflags = [ "-framework", "SDL2" ]
    handled = true
  } else if (target_os == "linux") {
    if (compiler == "clang") {
      libs = [ "-lSDL2" ]
      ldflags = [ "-L${sdl2_lib_path}" ]
      handled = true
    }
  }

  if (!handled) {
    assert(false, "SDL2: Unhandled OS/Compiler combo: $target_os/$compiler")
  }
}

source_set("sdl2") {
  sources = [
    "sdl_context.cc",
    "sdl_context.h",
    "input.cc",
    "input.h",
  ]
  public_configs = [
    ":sdl2_config",
  ]
  deps = [
    "//src/input",
  ]
}

executable("sdl2_test") {
  sources = [
    "sdl2_test.cc",
  ]
  configs += [
    ":sdl2_config",
  ]
}
