# Copyright 2018, Cristián Donoso.
# This code has a BSD license. See LICENSE.

source_set("utils") {
  sources = [
    "debug.cc",
    "debug.h",
    "file.cc",
    "file.h",
    "gl.cc",
    "gl.h",
    "log.cc",
    "log.h",
    "macros.h",
    "status.cc",
    "status.h",
    "string.cc",
    "string.h",
    "path.cc",
    "path.h",
  ]
  configs += [
    "//third_party/gl3w:gl3w_config",
  ]
  deps = [
    "//src/arch:arch_provider",
    "//third_party/stb",
    "//third_party/gl3w:gl3w",
  ]
}
