# Copyright 2018, Cristián Donoso.
# This code has a BSD license. See LICENSE.

source_set("utils") {
  sources = [
    "coords.h",
    "debug.cc",
    "debug.h",
    "file.cc",
    "file.h",
    "glm.h",
    "glm_impl.h",
    "log.cc",
    "log.h",
    "macros.h",
    "status.cc",
    "status.h",
    "string.cc",
    "string.h",
    "path.cc",
    "path.h",
  ]
  deps = [
    "//src/arch:arch_provider",
    "//third_party/stb",
  ]
}
