# Copyright 2018, Cristián Donoso.
# This code has a BSD license. See LICENSE.

source_set("debug") {
  sources = [
    "timed_block.cc",
    "timed_block.h",
    "timer.cc",
    "timer.h",
    "time_logger.cc",
    "time_logger,h",
    "volumes.cc",
    "volumes.h",
  ]

  public_deps = [
    "//warhol/platform",
  ]

  deps = [
    "//warhol/graphics/GL",
    "//warhol/sdl2",
    "//warhol/utils",
  ]
}
