# Copyright 2018, Cristián Donoso.
# This code has a BSD license. See LICENSE.

group("debug") {
  deps = [
    ":timing",
    ":volumes",
  ]
}


source_set("timing"){
  sources = [
    "timed_block.cc",
    "timed_block.h",
    "timer.cc",
    "timer.h",
    "time_logger.cc",
    "time_logger,h",
  ]

  deps = [
    "//warhol/window:common",
    "//warhol/utils",
  ]
}

source_set("volumes") {
  sources = [
    "volumes.cc",
    "volumes.h",
  ]

  public_deps = [
    "//warhol/platform",
  ]

  deps = [
    "//warhol/graphics/GL",
    "//warhol/utils",
  ]
}
