# Copyright 2018, Cristián Donoso.
# This code has a BSD license. See LICENSE.

# See the buildconfig file (set in .gn) for then *_enabled variables.

config("common_config") {
  defines = []

  if (opengl_enabled) {
    defines += [ "WARHOL_OPENGL_ENABLED" ]
  }

  if (vulkan_enabled) {
    defines += [ "WARHOL_VULKAN_ENABLED" ]
  }

}

if (opengl_enabled) {
  group("opengl_renderer") {

    public_configs = [
      ":common_config",
    ]

    deps = [
      "//warhol/graphics/opengl",
    ]
  }
}

if (vulkan_enabled) {
  group("vulkan_renderer") {

    public_configs = [
      ":common_config",
    ]

    deps = [
      "//warhol/graphics/vulkan",
    ]
  }
}


