# Copyright 2018, Cristián Donoso.
# This code has a BSD license. See LICENSE.

# See the buildconfig file (set in .gn) for then *_enabled variables.

if (opengl_enabled) {
  group("opengl_renderer") {
    public_configs = [
      ":renderer_macros",
    ]

    deps = [
      "//warhol/graphics/opengl",
    ]
  }
}

if (vulkan_enabled) {
  group("vulkan_renderer") {

    public_configs = [
      ":renderer_macros",
    ]

    deps = [
      "//warhol/graphics/vulkan",
    ]
  }
}

# Adds common config to key out functionality
config("renderer_macros") {
  defines = []

  if (opengl_enabled) {
    defines += [ "WARHOL_OPENGL_ENABLED" ]
  }

  if (vulkan_enabled) {
    defines += [ "WARHOL_VULKAN_ENABLED" ]
  }
}
