# Copyright 2018, Cristián Donoso.
# This code has a BSD license. See LICENSE.

# See the buildconfig file (set in .gn) for then *_enabled variables.

if (opengl_enabled) {
  group("opengl_renderer") {
    public_configs = [
      ":graphics_macros",
    ]

    deps = [
      ":graphics_common",
      "//warhol/graphics/opengl",
    ]
  }
}

if (vulkan_enabled) {
  group("vulkan_renderer") {

    public_configs = [
      ":graphics_macros",
    ]

    deps = [
      ":graphics_common",
      "//warhol/graphics/vulkan",
    ]
  }
}

source_set("graphics_common") {
  public = [
    "graphics.h",
  ]
}

config("graphics_macros") {
  defines = []

  if (opengl_enabled) {
    defines += [ "WARHOL_OPENGL_ENABLED" ]
  }

  if (vulkan_enabled) {
    defines += [ "WARHOL_VULKAN_ENABLED" ]
  }
}


