# Copyright 2018, Cristián Donoso.
# This code has a BSD license. See LICENSE.

source_set("imgui") {
  sources = [
    "imgui_context.cc",
    "imgui_context.h",
    "imgui_renderer.cc",
    "imgui_renderer.h",
  ]
  deps = [
    "//warhol/graphics/GL",
    "//warhol/sdl2",
  ]
  public_deps = [
    "//third_party/imgui",
  ]
}
