# Copyright 2018, Cristián Donoso.
# This code has a BSD license. See LICENSE.

# Platform is the a base level library, it has no dependencies.
source_set("platform") {
  public = [
    "platform.h",
    "timing.h",
    "path.h"
  ]

  sources = [
    "timing.cc",
    "path.cc"
  ]

  # Platform specific sources --------------------------------------------------

  if (is_windows) {
    sources += [ "windows_platform.cc" ]
  } else if (is_linux) {
    sources += [ "linux_platform.cc" ]
  } else if (is_osx) {
    sources += [ "osx_platform.cc" ]
  } else {
    assert(false, "Unhandled arch: $target_os")
  }
}

