# Copyright 2018, Cristián Donoso.
# This code has a BSD license. See LICENSE.

source_set("utils") {
  public = [
    "assert.h",
    "macros.h",
    "track_guard.h",
    "types.h",
  ]

  sources = [
    "assert.cc",
    "align.h",
    "coords.h",
    "debug.cc",
    "debug.h",
    "file.cc",
    "file.h",
    "glm.h",
    "glm_impl.h",
    "location.cc",
    "location.h",
    "log.cc",
    "log.h",
    "optional.h",
    "path.cc",
    "path.h",
    "scope_trigger.h",
    "status.cc",
    "status.h",
    "string.cc",
    "string.h",
    "types.cc",
  ]

  deps = [
    "//third_party/stb",
  ]
}
