# Copyright 2018, Cristián Donoso.
# This code has a BSD license. See LICENSE.

source_set("utils") {
  public = [
    "align.h",
    "coords.h",
    "debug.h",
    "file.h",
    "glm.h",
    "glm_impl.h",
    "location.h",
    "log.h",
    "macros.h",
    "path.h",
    "string.h",
    "types.h",
  ]

  sources = [
    "debug.cc",
    "file.cc",
    "location.cc",
    "log.cc",
    "optional.h",
    "path.cc",
    "scope_trigger.h",
    "status.cc",
    "status.h",
    "string.cc",
    "types.cc",
  ]

  deps = [
    "//third_party/stb",
  ]
}
