# Copyright 2019, Cristián Donoso.
# This code has a BSD license. See LICENSE.

declare_args() {
  sdl_enabled = false
}

config("common_config") {
  defines = []
  if (sdl_enabled) {
    defines += [ "WARHOL_SDL_ENABLED" ]
  }
}


# For functionality requiring window manager, they should depend on this.
source_set("common") {
  public = [
    "window_manager.h",
  ]

  sources = [
    "window_manager.cc",
  ]

  deps = [
    "//warhol/utils",
  ]

  public_configs = [
    ":common_config",
  ]
}

source_set("sdl") {
  deps = [
    ":common",
    "//warhol/window/sdl",
  ]
}
