# Copyright 2019, Cristián Donoso.
# This code has a BSD license. See LICENSE.

declare_args() {
  sdl_enabled = false
}

config("common_config") {
  defines = []
  if (sdl_enabled) {
    defines += [ "WARHOL_SDL_ENABLED" ]
  }
}


# For functionality requiring window manager, they should depend on this.
source_set("common") {
  public = [
    "window_manager.h",
  ]

  sources = [
    "window_manager.cc",
  ]

  deps = [
    "//warhol/utils",
    "//warhol/window/common",
  ]

  public_configs = [
    ":common_config",
  ]
}

source_set("sdl_vulkan") {
  deps = [
    ":common",
    "//warhol/window/sdl:sdl_vulkan",
  ]
}
