# Copyright 2019, Cristián Donoso.
# This code has a BSD license. See LICENSE.

# See the buildconfig file (set in .gn) for then *_enabled variables.

config("common_config") {
  defines = []
  if (sdl_enabled) {
    defines += [ "WARHOL_SDL_ENABLED" ]
  }
}

if (sdl_enabled) {
  if (opengl_enabled) {
    source_set("sdl_opengl") {

      public_configs = [
        ":common_config",
      ]

      public_deps = [
        "//warhol/window/sdl:sdl_opengl",
      ]
    }
  }

  if (vulkan_enabled) {
    source_set("sdl_vulkan") {

      public_configs = [
        ":common_config",
      ]

      public_deps = [
        "//warhol/window/sdl:sdl_vulkan",
      ]
    }
  }
}
