# Copyright 2018, Cristián Donoso.
# This code has a BSD license. See LICENSE.


config("GL_config") {
  if (target_os == "mac" && compiler == "clang") {
    ldflags = [ "-framework", "OpenGL" ]
  }
}

source_set("GL") {
  sources = [
    "def.cc",
    "def.h",
    "utils.cc",
    "utils.h",
  ]
  public_configs = [
    ":GL_config",
    "//third_party/gl3w:gl3w_config",
  ]

  public_deps = [
    "//third_party/gl3w",
  ]
}
