# Copyright 2019, Cristián Donoso.
# This code has a BSD license. See LICENSE.

# Separated for testing purposes.
source_set("render_command") {
  sources = [
    "render_command.h",
  ]

  deps = [
    "//warhol/containers",
    "//warhol/math",
    "//warhol/utils",
  ]
}

source_set("common") {
  public = [
    "renderer.h",
    "image.h",
    "mesh.h",
    "shader.h",
    "texture.h",
  ]

  sources = [
    "image.cc",
    "mesh.cc",
    "render_command.h",
    "renderer.cc",
    "renderer_backend.h",
    "shader.cc",
    "texture.cc",
  ]

  deps = [
    "//warhol/containers",
    "//third_party/stb",
    "//third_party/tiny_obj_loader",
    "//warhol/utils",
  ]
}
