# Copyright 2019, Cristián Donoso.
# This code has a BSD license. See LICENSE.

# Separated for to stop code just needind the render command on depending
# on graphics functionality such as stb of tiny_obj.
source_set("render_command") {
  public = [
    "render_command.h",
  ]

  sources = [
    "render_command.cc",
  ]

  deps = [
    "//warhol/containers",
    "//warhol/math",
    "//warhol/utils",
  ]
}

source_set("common") {
  public = [
    "renderer.h",
    "image.h",
    "mesh.h",
    "shader.h",
    "texture.h",
  ]

  sources = [
    "image.cc",
    "mesh.cc",
    "renderer.cc",
    "renderer_backend.h",
    "shader.cc",
    "texture.cc",
  ]

  deps = [
    ":render_command",
    "//warhol/containers",
    "//third_party/stb",
    "//third_party/tiny_obj_loader",
    "//warhol/utils",
  ]
}
