# Copyright 2019, Cristián Donoso.
# This code has a BSD license. See LICENSE.

# Separated for to stop code just needind the render command on depending
# on graphics functionality such as stb of tiny_obj.
source_set("standalone") {
  public = [
    "shader.h",
    "render_command.h",
  ]

  sources = [
    "render_command.cc",
    "shader.cc",
  ]

  deps = [
    "//warhol/containers",
    "//warhol/math",
    "//warhol/utils",
  ]
}

source_set("common") {
  public = [
    "renderer.h",
    "mesh.h",
    "texture.h",
  ]

  sources = [
    "mesh.cc",
    "renderer.cc",
    "renderer_backend.h",
    "texture.cc",
  ]

  deps = [
    ":standalone",
    "//warhol/containers",
    "//third_party/stb",
    "//third_party/tiny_obj_loader",
    "//warhol/utils",
  ]
}
